# muthukadan.net

./: .gitignore  404.html  AGENTS.md  CNAME  Gemfile  README.md  _config.yml  about.html  about.md  archive.html  atom.xml  blogs.html  blogs.md  build.sh  connect.html  feed.xml  generate_sample_posts.py  generate_site.py  index.html  index.md  keybase.txt  package-lock.json  package.json  posts-page-2.html  posts-page-3.html  posts-page-4.html  posts-page-5.html  posts.html  pyproject.toml  robots.txt  run.sh  sitemap.xml  tailwind.config.js
_data/: navigation.yml
_drafts/: template.markdown
_layouts/: article.html  default.html
_pages/: about.md
_posts/: 2014-02-07-trying-jekyll-with-github-pages.markdown  2014-02-07-welcome-to-jekyll.markdown  2014-03-14-parsing-text-files-using-parsley.markdown  2014-04-07-sathyavedapusthakam-part-1.markdown  2014-04-09-windows-commands.markdown  2014-11-20-selenium-page-objects.markdown  2014-11-26-keynote-speech-on-test-automation-using-pytest.markdown  2014-11-28-an-introduction-to-go-programming.markdown  2014-12-06-the-devops-gopher-notes-1.markdown  2014-12-xx-getting-started-with-go-programming.markdown  2015-03-10-gopherconindia-2015-talk.markdown  2016-01-30-new-direction-for-blog.markdown  2016-04-19-golang-workshops.markdown  2016-06-15-golang-workshop-sahrdaya-rebootcalicut.markdown  2016-12-25-total-7-golang-workshops.markdown  2017-05-03-fabric8-planner.markdown  2017-05-08-golang-workshops-data-scientists-students.markdown  2017-10-07-golang-workshops-icefoss-fisat.markdown  (+3 more)
about/: index.html
css/: base.css  (+3 more)
(+221 files in other folders)
